--- a/index.html
+++ b/index.html
@@ -190,22 +190,6 @@
                     <input type="text" id="kartEngine" placeholder="Ex: Rotax Max">
                 </div>
 
-                <div class="form-group">
-                    <label for="kartCategory">Catégorie :</label>
-                    <select id="kartCategory">
-                        <option value="">-- Sélectionnez --</option>
-                        <option value="Loisir">Loisir</option>
-                        <option value="Compétition Régionale">Compétition Régionale</option>
-                        <option value="Compétition Nationale">Compétition Nationale</option>
-                        <option value="Compétition Internationale">Compétition Internationale</option>
-                    </select>
-                </div>
-
-                <div class="form-group">
-                    <label for="pilotNumber">Numéro de course :</label>
-                    <input type="text" id="pilotNumber" placeholder="Ex: 42">
-                </div>
-
                 <button type="submit" class="btn-primary">💾 Sauvegarder le profil</button>
             </form>
         </section>
@@ -223,9 +207,8 @@
                         <option value="dark">🌙 Sombre (par défaut)</option>
                         <option value="light">☀️ Clair</option>
                     </select>
+                    <p style="color: #999; font-size: 0.85em; margin-top: 8px;">Le thème s'applique automatiquement</p>
                 </div>
-
-                <button class="btn-primary" id="applyTheme">✅ Appliquer le thème</button>
             </div>
 
             <div class="settings-section">
