--- a/index.html
+++ b/index.html
@@ -244,21 +244,30 @@
                 <form id="profileForm" class="profile-form">
                     <div class="form-group">
                         <label for="pilotName">Nom du pilote :</label>
-                        <input type="text" id="pilotName" placeholder="Ex: Simon Dupont">
+                        <input type="text" id="pilotName" placeholder="Ex: Simon Dupont" class="settings-input">
                     </div>
 
                     <div class="form-group">
                         <label for="kartType">Type de kart :</label>
-                        <input type="text" id="kartType" placeholder="Ex: CRG Road Rebel">
+                        <input type="text" id="kartType" placeholder="Ex: CRG Road Rebel" class="settings-input">
                     </div>
 
                     <div class="form-group">
                         <label for="kartEngine">Moteur :</label>
-                        <input type="text" id="kartEngine" placeholder="Ex: Rotax Max">
+                        <input type="text" id="kartEngine" placeholder="Ex: Rotax Max" class="settings-input">
                     </div>
 
-                    <button type="submit" class="btn-primary">💾 Sauvegarder le profil</button>
+                    <button type="submit" class="btn-settings">💾 Sauvegarder le profil</button>
                 </form>
+            </div>
+            
+            <!-- Section Soutien -->
+            <div class="settings-section">
+                <h3>❤️ Soutenir le projet</h3>
+                <a href="https://paypal.me/VOTRE_LIEN" target="_blank" rel="noopener">
+                    <button class="btn-settings btn-donate">☕ Offrir un café au créateur</button>
+                </a>
+                <p style="color: #999; margin-top: 10px; font-size: 0.9em;">Votre soutien aide à améliorer l'app !</p>
             </div>
             
             <!-- Section Apparence -->
@@ -290,15 +299,6 @@
                     ⚠️ Attention : Supprime toutes vos sessions, votre profil et vos circuits.<br>
                     <strong>Action irréversible !</strong>
                 </p>
-            </div>
-
-            <!-- Section Soutien -->
-            <div class="settings-section">
-                <h3>❤️ Soutenir le projet</h3>
-                <a href="https://paypal.me/VOTRE_LIEN" target="_blank" rel="noopener">
-                    <button class="btn-settings btn-donate">☕ Offrir un café au créateur</button>
-                </a>
-                <p style="color: #999; margin-top: 10px; font-size: 0.9em;">Votre soutien aide à améliorer l'app !</p>
             </div>
 
             <!-- Section À propos -->
