--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <label>🏁 Circuit</label>
                 <div class="circuit-select-row">
                     <select id="circuit" required><option value="">-- Sélectionnez --</option></select>
-                    <button type="button" class="btn-add-circuit" id="addCircuitBtn">➕</button>
+                    <button type="button" class="btn-add-circuit" id="addCircuitBtn" title="Ajouter un circuit">➕</button>
                 </div>
             </div>
             <div class="form-row">
@@ -223,7 +223,7 @@
             </div>
             <div class="form-row">
                 <div class="form-group"><label>⚙️ Couronne</label><input type="number" id="crownUsed" min="0" placeholder="Ex: 82"></div>
-                <div class="form-group"><label>🏎️ Tours moteur</label><input type="number" id="maxLaps" min="0" placeholder="Ex: 500"></div>
+                <div class="form-group"><label>🏎️ Tours moteur</label><input type="number" id="maxLaps" min="0" placeholder="Ex: 1400"></div>
             </div>
             <div class="form-row">
                 <div class="form-group"><label>🌦️ Météo</label>
@@ -233,7 +233,7 @@
             </div>
             <div class="form-row">
                 <div class="form-group"><label>🛞 Pneus</label>
-                    <select id="tireType"><option value="">--</option><option>Slick</option><option>Pluie</option><option>Intermédiaire</option></select>
+                    <select id="tireType"><option value="">--</option><option>Soft</option><option>Medium</option><option>Hard</option><option>Pluie</option></select>
                 </div>
                 <div class="form-group"><label>⚡ Pression (bar)</label><input type="number" id="tirePressure" step="0.1" min="0" max="5" placeholder="Ex: 0.8"></div>
             </div>
