--- a/index.html
+++ b/index.html
@@ -124,46 +124,16 @@
             <button class="btn-close" id="closeFaqBtn">✕</button>
         </div>
         <div class="modal-body faq-body">
-            <div class="faq-item">
-                <div class="faq-q" onclick="toggleFaq(this)"><span class="faq-q-text">Comment ajouter une session ?</span><span class="faq-chevron">▼</span></div>
-                <div class="faq-a"><div class="faq-a-inner">Appuie sur "➕ Session", remplis les champs et valide. La session apparaît immédiatement dans le dashboard.</div></div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-q" onclick="toggleFaq(this)"><span class="faq-q-text">Comment est calculé mon meilleur temps ?</span><span class="faq-chevron">▼</span></div>
-                <div class="faq-a"><div class="faq-a-inner">C'est le temps minimum parmi toutes tes sessions sur un circuit. Il s'affiche en vert dans l'analyse des circuits.</div></div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-q" onclick="toggleFaq(this)"><span class="faq-q-text">Comment ajouter un circuit ?</span><span class="faq-chevron">▼</span></div>
-                <div class="faq-a"><div class="faq-a-inner">Dans le formulaire de session, appuie sur "➕" à côté du champ Circuit, entre le nom et confirme.</div></div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-q" onclick="toggleFaq(this)"><span class="faq-q-text">Puis-je utiliser l'app sur plusieurs appareils ?</span><span class="faq-chevron">▼</span></div>
-                <div class="faq-a"><div class="faq-a-inner">Oui ! Connecte-toi avec le même compte sur tous tes appareils. Les données se synchronisent automatiquement.</div></div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-q" onclick="toggleFaq(this)"><span class="faq-q-text">Comment installer l'app sur mon smartphone ?</span><span class="faq-chevron">▼</span></div>
-                <div class="faq-a"><div class="faq-a-inner">Va dans Réglages → "📲 Installation smartphone". Les instructions s'adaptent automatiquement à ton téléphone et navigateur.</div></div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-q" onclick="toggleFaq(this)"><span class="faq-q-text">Comment modifier ou supprimer une session ?</span><span class="faq-chevron">▼</span></div>
-                <div class="faq-a"><div class="faq-a-inner">Dans l'Historique, utilise ✏️ pour modifier et 🗑️ pour supprimer une session.</div></div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-q" onclick="toggleFaq(this)"><span class="faq-q-text">Pourquoi enregistrer la météo ?</span><span class="faq-chevron">▼</span></div>
-                <div class="faq-a"><div class="faq-a-inner">La météo influence les temps. En la comparant, tu analyses mieux tes vraies performances.</div></div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-q" onclick="toggleFaq(this)"><span class="faq-q-text">Mes données sont-elles sécurisées ?</span><span class="faq-chevron">▼</span></div>
-                <div class="faq-a"><div class="faq-a-inner">Oui. Tes données sont stockées sur une base de données sécurisée (Google), et seul ton compte y a accès. Personne d'autre ne peut les voir.</div></div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-q" onclick="toggleFaq(this)"><span class="faq-q-text">Comment supprimer mon compte ?</span><span class="faq-chevron">▼</span></div>
-                <div class="faq-a"><div class="faq-a-inner">Réglages → "⚠️ Supprimer mon compte". Confirme avec ton nom de pilote. La suppression est définitive.</div></div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-q" onclick="toggleFaq(this)"><span class="faq-q-text">Comment soutenir le projet ?</span><span class="faq-chevron">▼</span></div>
-                <div class="faq-a"><div class="faq-a-inner">Offre un café sur buymeacoffee.com/kartdashboard ☕ Ton soutien aide à améliorer l'app, merci !</div></div>
-            </div>
+            <div class="faq-item"><div class="faq-q">Comment ajouter une session ?</div><div class="faq-a">Appuyez sur "➕ Session", remplissez les champs et validez. La session apparaît immédiatement dans le dashboard.</div></div>
+            <div class="faq-item"><div class="faq-q">Comment est calculé mon meilleur temps ?</div><div class="faq-a">C'est le temps minimum parmi toutes vos sessions sur un circuit. Il s'affiche en vert dans l'analyse des circuits.</div></div>
+            <div class="faq-item"><div class="faq-q">Comment ajouter un circuit ?</div><div class="faq-a">Dans le formulaire de session, appuyez sur "➕" à côté du champ Circuit, entrez le nom et confirmez.</div></div>
+            <div class="faq-item"><div class="faq-q">Puis-je utiliser l'app sur plusieurs appareils ?</div><div class="faq-a">Oui ! Connectez-vous avec le même compte sur tous vos appareils. Les données se synchronisent automatiquement.</div></div>
+            <div class="faq-item"><div class="faq-q">Comment installer l'app sur mon smartphone ?</div><div class="faq-a">Réglages → "📲 Installer l'app". Sur iOS Safari : Partager → Sur l'écran d'accueil.</div></div>
+            <div class="faq-item"><div class="faq-q">Comment modifier ou supprimer une session ?</div><div class="faq-a">Dans l'Historique, utilisez ✏️ pour modifier et 🗑️ pour supprimer.</div></div>
+            <div class="faq-item"><div class="faq-q">Pourquoi enregistrer la météo ?</div><div class="faq-a">La météo influence les temps. En la comparant, vous analysez mieux vos vraies performances.</div></div>
+            <div class="faq-item"><div class="faq-q">Mes données sont-elles sécurisées ?</div><div class="faq-a">Oui. Stockées sur Firebase (Google), seul votre compte y a accès.</div></div>
+            <div class="faq-item"><div class="faq-q">Comment supprimer mon compte ?</div><div class="faq-a">Réglages → "⚠️ Supprimer mon compte". Confirmez avec votre nom. Suppression définitive.</div></div>
+            <div class="faq-item"><div class="faq-q">Comment soutenir le projet ?</div><div class="faq-a">Offrez un café sur buymeacoffee.com/kartdashboard ☕ Merci pour votre soutien !</div></div>
         </div>
     </div>
 </div>
@@ -245,7 +215,6 @@
                 <div class="circuit-select-row">
                     <select id="circuit" required><option value="">-- Sélectionnez --</option></select>
                     <button type="button" class="btn-add-circuit" id="addCircuitBtn" title="Ajouter un circuit">➕</button>
-                    <button type="button" class="btn-manage-circuit" id="manageCircuitBtn" title="Modifier / Supprimer ce circuit">✏️</button>
                 </div>
             </div>
             <div class="form-row">
@@ -296,9 +265,9 @@
         <h2>⚙️ Réglages</h2>
         <div class="settings-section">
             <h3>👤 Profil du pilote</h3>
-            <div class="form-group"><label>Nom</label><input type="text" id="pilotName" class="settings-input" placeholder="Votre nom"></div>
-            <div class="form-group"><label>Type de kart</label><input type="text" id="kartType" class="settings-input" placeholder="Ex: CRG Road Rebel"></div>
-            <div class="form-group"><label>Moteur</label><input type="text" id="kartEngine" class="settings-input" placeholder="Ex: Rotax Max"></div>
+            <div class="profil-field-row"><span class="profil-field-lbl">Nom</span><input type="text" id="pilotName" class="settings-input profil-input-compact" placeholder="Votre nom"></div>
+            <div class="profil-field-row"><span class="profil-field-lbl">Kart</span><input type="text" id="kartType" class="settings-input profil-input-compact" placeholder="Ex: CRG Road Rebel"></div>
+            <div class="profil-field-row"><span class="profil-field-lbl">Moteur</span><input type="text" id="kartEngine" class="settings-input profil-input-compact" placeholder="Ex: Rotax Max"></div>
             <button class="btn-settings" id="saveProfileSettingsBtn">💾 Sauvegarder le profil</button>
         </div>
         <div class="settings-section">
@@ -338,32 +307,6 @@
             <p class="settings-hint" style="text-align:center;">Karting Dashboard v4.0 ❤️</p>
         </div>
     </section>
-</div>
-
-<!-- MODAL GESTION CIRCUIT -->
-<div class="modal-overlay" id="manageCircuitModal" style="display:none;">
-    <div class="modal-box">
-        <div class="modal-header">
-            <h2>✏️ Gérer le circuit</h2>
-            <button class="btn-close" id="closeManageCircuitBtn">✕</button>
-        </div>
-        <div class="modal-body">
-            <div id="manageCircuitBadge" class="manage-circuit-badge"></div>
-
-            <div class="manage-section">
-                <div class="manage-section-title">Renommer</div>
-                <div class="manage-rename-row">
-                    <input type="text" id="renameCircuitInput" placeholder="Nouveau nom...">
-                    <button type="button" id="renameCircuitBtn" class="btn-rename-circuit">✅ Sauver</button>
-                </div>
-            </div>
-
-            <div class="manage-section">
-                <div class="manage-section-title">Supprimer</div>
-                <div id="manageDeleteBlock" class="manage-delete-block"></div>
-            </div>
-        </div>
-    </div>
 </div>
 
 <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
