--- a/index.html
+++ b/index.html
@@ -294,16 +294,14 @@
             <button class="btn-settings" id="faqBtn">❓ FAQ - Questions fréquentes</button>
         </div>
         <div class="settings-section">
-            <h3>🔐 Compte</h3>
+            <h3>🔐 Compte &amp; Données</h3>
             <p id="settingsUserEmail" class="settings-hint"></p>
-            <button class="btn-settings" id="logoutBtn">🚪 Se déconnecter</button>
-        </div>
-        <div class="settings-section">
-            <h3>💾 Données</h3>
+            <button class="btn-settings" id="logoutBtn" style="margin-bottom:12px;">🚪 Se déconnecter</button>
+            <div class="settings-separator"></div>
             <button class="btn-settings btn-danger" id="clearDataBtn">⚠️ Supprimer définitivement mon compte</button>
             <p class="settings-hint">⚠️ Action irréversible</p>
         </div>
-        <div class="settings-section">
+        <div class="settings-section settings-version">
             <p class="settings-hint" style="text-align:center;">Karting Dashboard v4.0 ❤️</p>
         </div>
     </section>
