--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                 <div class="circuit-select-row">
                     <select id="circuit" required><option value="">-- Sélectionnez --</option></select>
                     <button type="button" class="btn-add-circuit" id="addCircuitBtn" title="Ajouter un circuit">➕</button>
+                    <button type="button" class="btn-manage-circuit" id="manageCircuitBtn" title="Gérer les circuits">⚙️</button>
                 </div>
             </div>
             <div class="form-row">
@@ -305,6 +306,17 @@
             <p class="settings-hint" style="text-align:center;">Karting Dashboard v4.0 ❤️</p>
         </div>
     </section>
+</div>
+
+<!-- MODAL GESTION CIRCUITS -->
+<div class="modal-overlay" id="circuitManagerModal" style="display:none;">
+    <div class="modal-box">
+        <div class="modal-header">
+            <h3>⚙️ Gérer les circuits</h3>
+            <button class="modal-close-btn" id="closeCircuitManagerBtn">✕</button>
+        </div>
+        <div id="circuitManagerList" class="circuit-manager-list"></div>
+    </div>
 </div>
 
 <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
