--- a/index.html
+++ b/index.html
@@ -258,6 +258,24 @@
     <!-- HISTORIQUE -->
     <section class="view-section" data-view="history" style="display:none;">
         <h2>📋 Historique complet</h2>
+        <div class="history-filters">
+            <select id="historyFilterCircuit" class="history-select"><option value="all">🏁 Tous les circuits</option></select>
+            <select id="historyFilterWeather" class="history-select">
+                <option value="all">🌦️ Météo</option>
+                <option value="☀️ Sec">☀️ Sec</option>
+                <option value="🌤️ Nuageux">🌤️ Nuageux</option>
+                <option value="🌧️ Pluie">🌧️ Pluie</option>
+                <option value="🌩️ Orage">🌩️ Orage</option>
+            </select>
+            <select id="historyFilterTire" class="history-select">
+                <option value="all">🛞 Pneus</option>
+                <option value="Soft">Soft</option>
+                <option value="Medium">Medium</option>
+                <option value="Hard">Hard</option>
+                <option value="Pluie">Pluie</option>
+            </select>
+        </div>
+        <div id="historyCount" class="history-count"></div>
         <div id="sessionsList" class="sessions-list"></div>
     </section>
 
