--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </div>
             <div class="form-row">
                 <div class="form-group"><label>🌦️ Météo</label>
-                    <select id="weather"><option value="">--</option><option>☀️ Sec</option><option>🌤️ Nuageux</option><option>🌧️ Pluie</option><option>🌩️ Orage</option></select>
+                    <select id="weather"><option value="">--</option><option>☀️ Sec</option><option>🌤️ Nuageux</option><option>🌧️ Pluie</option></select>
                 </div>
                 <div class="form-group"><label>🌡️ Température (°C)</label><input type="number" id="temperature" min="-20" max="50" placeholder="Ex: 18"></div>
             </div>
@@ -265,7 +265,6 @@
                 <option value="☀️ Sec">☀️ Sec</option>
                 <option value="🌤️ Nuageux">🌤️ Nuageux</option>
                 <option value="🌧️ Pluie">🌧️ Pluie</option>
-                <option value="🌩️ Orage">🌩️ Orage</option>
             </select>
             <select id="historyFilterTire" class="history-select">
                 <option value="all">🛞 Pneus</option>
